# SpikeSense

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements-dashboard.txt  requirements.txt
.streamlit/: config.toml
config/: config.yaml
dashboard/: api_client.py  app.py  local_scoring.py
data/: README.md  spike_sense.db
data/processed/: realAWSCloudwatch_ec2_cpu_utilization_825cc2_test_features.npy  realAWSCloudwatch_ec2_cpu_utilization_825cc2_test_windows.npy  realAWSCloudwatch_ec2_cpu_utilization_825cc2_test_windows_3d.npy  realAWSCloudwatch_ec2_cpu_utilization_825cc2_train_features.npy  realAWSCloudwatch_ec2_cpu_utilization_825cc2_train_labels.npy  realAWSCloudwatch_ec2_cpu_utilization_825cc2_train_windows.npy  realAWSCloudwatch_ec2_cpu_utilization_825cc2_train_windows_3d.npy  realAWSCloudwatch_ec2_cpu_utilization_825cc2_val_features.npy  realAWSCloudwatch_ec2_cpu_utilization_825cc2_val_windows.npy  realAWSCloudwatch_ec2_cpu_utilization_825cc2_val_windows_3d.npy  realAWSCloudwatch_ec2_network_in_257a54_test_features.npy  realAWSCloudwatch_ec2_network_in_257a54_test_labels.npy  (+70 more)
models/: if_metadata.json  isolation_forest.joblib  lstm_autoencoder.keras  lstm_metadata.json
report/: Spike-Sense_Project_Report.docx  _index.json
results/: evaluation_results.json  if_contamination_sweep.json  lstm_threshold_sweep.json  lstm_training_history.json  metrics_summary.csv
scripts/: evaluate.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_database.py  test_evaluation.py  test_models.py
(+26 files in other folders)
