[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spike-sense"
version = "0.1.0"
description = "AI-driven anomaly detection system for cloud infrastructure metrics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
